--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -25,11 +25,11 @@ jobs:
       - name: Build wheels
         run: |
           pip install wheel
-          python setup.py bdist_wheel
+          python setup.py bdist_wheel --universal
 
       - uses: actions/upload-artifact@v2
         with:
-          path: ./wheelhouse/*.whl
+          path: ./dist/*.whl
 
   build_sdist:
     name: Build source distribution
